@@ -1206,14 +1206,20 @@ public abstract class GenericAnnotatedTypeFactory<
     }
 
     /**
-     * Analyze the AST {@code ast} and store the result.
+     * Analyze the AST {@code ast} and store the result. Additional operations that should be
+     * performed after analysis should be implemented in {@link #postAnalyze(ControlFlowGraph)}.
      *
-     * @param queue the queue to add more things to scan
-     * @param fieldValues the abstract values for all fields of the same class
+     * @param queue the queue for encountered class trees and their initial stores
+     * @param lambdaQueue the queue for encountered lambda expression trees and their initial stores
      * @param ast the AST to analyze
+     * @param fieldValues the abstract values for all fields of the same class
      * @param currentClass the class we are currently looking at
-     * @param isInitializationCode are we analyzing a (non-static) initializer block of a class
+     * @param isInitializationCode are we analyzing a (static/non-static) initializer block of a
+     *     class
+     * @param updateInitializationStore should the initialization store be updated
+     * @param isStatic are we analyzing a static construct
      * @param capturedStore the input Store to use for captured variables, e.g. in a lambda
+     * @see #postAnalyze(org.checkerframework.dataflow.cfg.ControlFlowGraph)
      */
     protected void analyze(
             Queue<Pair<ClassTree, Store>> queue,
@@ -1293,25 +1299,43 @@ public abstract class GenericAnnotatedTypeFactory<
             }
         }
 
-        if (checker.hasOption("flowdotdir") || checker.hasOption("cfgviz")) {
-            handleCFGViz();
-        }
-
-        // add classes declared in method
+        // add classes declared in CFG
         for (ClassTree cls : cfg.getDeclaredClasses()) {
             queue.add(Pair.of(cls, getStoreBefore(cls)));
         }
+        // add lambdas declared in CFG
         for (LambdaExpressionTree lambda : cfg.getDeclaredLambdas()) {
             lambdaQueue.add(Pair.of(lambda, getStoreBefore(lambda)));
         }
+
+        postAnalyze(cfg);
     }
 
     /**
-     * Handle the visualization of the CFG, by calling {@code visualizeCFG} on the analysis. This
-     * method gets invoked in {@code analyze} if one of the visualization options is provided.
+     * Perform any additional operations on a CFG. Called once per CFG, after the CFG has been
+     * analyzed by {@link #analyze(Queue, Queue, UnderlyingAST, List, ClassTree, boolean, boolean,
+     * boolean, CFAbstractStore)}. This method can be used to initialize additional state or to
+     * perform any analyses that are easier to perform on the CFG instead of the AST.
+     *
+     * @param cfg the CFG
+     * @see #analyze(java.util.Queue, java.util.Queue,
+     *     org.checkerframework.dataflow.cfg.UnderlyingAST, java.util.List,
+     *     com.sun.source.tree.ClassTree, boolean, boolean, boolean,
+     *     org.checkerframework.framework.flow.CFAbstractStore)
      */
-    protected void handleCFGViz() {
-        analysis.visualizeCFG();
+    protected void postAnalyze(ControlFlowGraph cfg) {
+        handleCFGViz(cfg);
+    }
+
+    /**
+     * Handle the visualization of the CFG, if necessary.
+     *
+     * @param cfg the CFG
+     */
+    protected void handleCFGViz(ControlFlowGraph cfg) {
+        if (checker.hasOption("flowdotdir") || checker.hasOption("cfgviz")) {
+            getCFGVisualizer().visualize(cfg, cfg.getEntryBlock(), analysis);
+        }
     }
 
     /**
