@@ -44,6 +44,9 @@ Renamed meta-annotation SuppressWarningsKeys to SuppressWarningsPrefix.
 Renamed SourceChecker#getSuppressWarningsKeys(...) to getSuppressWarningsPrefixes.
 Renamed SubtypingChecker#getSuppressWarningsKeys to getSuppressWarningsPrefixes.
 
+Added GenericAnnotatedTypeFactory#postAnalyze, changed signature of
+GenericAnnotatedTypeFactory#handleCFGViz, and removed CFAbstractAnalysis#visualizeCFG.
+
 Removed methods and classes marked deprecated in release 3.3.0 or earlier.
 
 ---------------------------------------------------------------------------
